User View & Invite Fix

--- a/maQx/maQx.csproj
+++ b/maQx/maQx.csproj
@@ -236,6 +236,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AdministratorsController.cs" />
     <Compile Include="Controllers\AppController.cs" />
     <Compile Include="Controllers\GetController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -1138,6 +1139,7 @@
     <Content Include="Views\Emails\UserInvite.Html.cshtml" />
     <Content Include="Scripts\version.json" />
     <Content Include="Views\Invites\_View.cshtml" />
+    <Content Include="Views\Administrators\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
