--- a/maQx/Web.config
+++ b/maQx/Web.config
@@ -14,7 +14,7 @@
   <system.net>
     <mailSettings>
       <smtp deliveryMethod="Network">
-        <network host="ipringsltd" port="25" defaultCredentials="false"/>
+        <network host="smtp.gmail.com" userName="ms@iprings.com" password="isoutbox" enableSsl="true" port="587" defaultCredentials="false"/>
       </smtp>
     </mailSettings>
   </system.net>
