--- a/maQx/packages.config
+++ b/maQx/packages.config
@@ -18,6 +18,7 @@
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.OData" version="5.3.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.2" targetFramework="net45" />
@@ -27,6 +28,8 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.2" targetFramework="net45" />
+  <package id="Microsoft.OData.Core" version="6.5.0" targetFramework="net451" />
+  <package id="Microsoft.OData.Edm" version="6.5.0" targetFramework="net451" />
   <package id="Microsoft.Owin" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security" version="3.0.0" targetFramework="net45" />
@@ -36,6 +39,7 @@
   <package id="Microsoft.Owin.Security.MicrosoftAccount" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.Spatial" version="6.5.0" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net45" />
