--- a/maQx/maQx.csproj
+++ b/maQx/maQx.csproj
@@ -250,6 +250,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdministratorsController.cs" />
     <Compile Include="Controllers\AppController.cs" />
+    <Compile Include="Controllers\DepartmentMenusController.cs" />
     <Compile Include="Controllers\DepartmentsController.cs" />
     <Compile Include="Controllers\DivisionsController.cs" />
     <Compile Include="Controllers\GetController.cs" />
@@ -261,13 +262,13 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\AppInterface.cs" />
     <Compile Include="Models\AppModels.cs" />
     <Compile Include="Models\Email.cs" />
     <Compile Include="Models\Extensions.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\JsonViewModels.cs" />
     <Compile Include="Models\ViewModels.cs" />
+    <Compile Include="Models\WebApiModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -316,6 +317,8 @@
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\components\directives\app-directive.js" />
     <Content Include="Scripts\components\services\app-service.js" />
+    <Content Include="Scripts\components\services\department-menu-service.js" />
+    <Content Include="Scripts\components\services\department-service.js" />
     <Content Include="Scripts\components\services\menu-service.js" />
     <Content Include="Scripts\components\services\user-service.js" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -1097,6 +1100,8 @@
     <Content Include="Scripts\respond.matchmedia.addListener.min.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\section\app-controller.js" />
+    <Content Include="Scripts\section\department-controller.js" />
+    <Content Include="Scripts\section\department-menu-controller.js" />
     <Content Include="Scripts\section\frame-controller.js" />
     <Content Include="Scripts\section\invite-controller.js" />
     <Content Include="Scripts\section\login-controller.js" />
@@ -1105,6 +1110,7 @@
     <Content Include="Scripts\section\shared-controller.js" />
     <Content Include="Scripts\section\table-controller.js" />
     <Content Include="Scripts\section\user-controller.js" />
+    <Content Include="Scripts\ui-bootstrap-0.12.0.min.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -1177,6 +1183,7 @@
     <Content Include="Views\Divisions\_Form.cshtml" />
     <Content Include="Views\Divisions\_View.cshtml" />
     <Content Include="Views\Departments\Index.cshtml" />
+    <Content Include="Views\DepartmentMenus\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
