--- a/maQx/packages.config
+++ b/maQx/packages.config
@@ -1,16 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="angularjs" version="1.3.5" targetFramework="net45" />
+  <package id="angularjs" version="1.3.10" targetFramework="net451" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="bootstrap" version="3.3.1" targetFramework="net45" />
-  <package id="Common.Logging" version="2.2.0" targetFramework="net45" />
-  <package id="Common.Logging.Core" version="2.2.1" targetFramework="net45" />
-  <package id="Dapper" version="1.38" targetFramework="net45" />
-  <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
-  <package id="Hangfire" version="1.2.2" targetFramework="net45" />
-  <package id="Hangfire.Core" version="1.2.2" targetFramework="net45" />
-  <package id="Hangfire.SqlServer" version="1.2.2" targetFramework="net45" />
-  <package id="jQuery" version="2.1.1" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.2" targetFramework="net451" />
+  <package id="FontAwesome" version="4.2.0" targetFramework="net451" />
+  <package id="Hangfire" version="1.3.3" targetFramework="net451" />
+  <package id="Hangfire.Core" version="1.3.3" targetFramework="net451" />
+  <package id="Hangfire.SqlServer" version="1.3.3" targetFramework="net451" />
+  <package id="jQuery" version="2.1.3" targetFramework="net451" />
   <package id="jQuery.Validation" version="1.13.1" targetFramework="net45" />
   <package id="linq.js" version="3.0.4-beta5" targetFramework="net45" />
   <package id="linq.js-jQuery" version="3.0.4-beta5" targetFramework="net45" />
@@ -42,10 +40,10 @@
   <package id="Microsoft.Spatial" version="6.5.0" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Postal.Mvc5" version="1.2.0" targetFramework="net45" />
-  <package id="RazorEngine" version="3.4.2" targetFramework="net45" />
+  <package id="RazorEngine" version="3.5.3" targetFramework="net451" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
