Fixes JSHint - Trailings WhiteSpace - Typos errors

--- a/maQx/Web.config
+++ b/maQx/Web.config
@@ -6,8 +6,9 @@
 <configuration>
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-maQx-20141103011048.mdf;Initial Catalog=aspnet-maQx-20141103011048;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
@@ -40,7 +41,7 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.1" />
     <httpRuntime targetFramework="4.5" />
-    
+
   </system.web>
   <system.webServer>
     <urlCompression doStaticCompression="true" doDynamicCompression="true" />
@@ -56,6 +57,15 @@
       <mimeMap fileExtension=".otf" mimeType="font/opentype" />
       <remove fileExtension=".eot" />
       <mimeMap fileExtension=".eot" mimeType="application/vnd.ms-fontobject" />
+      <mimeMap fileExtension=".mp4" mimeType="video/mp4" />
+      <mimeMap fileExtension=".m4v" mimeType="video/m4v" />
+      <mimeMap fileExtension=".ogg" mimeType="video/ogg" />
+      <mimeMap fileExtension=".ogv" mimeType="video/ogg" />
+      <mimeMap fileExtension=".webm" mimeType="video/webm" />
+      <mimeMap fileExtension=".oga" mimeType="audio/ogg" />
+      <mimeMap fileExtension=".spx" mimeType="audio/ogg" />
+      <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
+      <mimeMap fileExtension=".svgz" mimeType="image/svg+xml" />
     </staticContent>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
