--- a/maQx/maQx.csproj
+++ b/maQx/maQx.csproj
@@ -220,6 +220,9 @@
     <Reference Include="System.Net.Http.WebRequest">
     </Reference>
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="UnitsNet">
+      <HintPath>..\packages\UnitsNet.3.4.0\lib\net451\UnitsNet.dll</HintPath>
+    </Reference>
     <Reference Include="WebGrease, Version=1.6.5135.21930, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\WebGrease.1.6.0\lib\WebGrease.dll</HintPath>
@@ -1225,6 +1228,11 @@
     <Content Include="Views\Dies\_Form.cshtml" />
     <Content Include="Views\Dies\_View.cshtml" />
     <Content Include="Views\ProductRawMaterials\Index.cshtml" />
+    <Content Include="Views\ProductRawMaterials\Create.cshtml" />
+    <Content Include="Views\ProductRawMaterials\_Form.cshtml" />
+    <Content Include="Views\ProductRawMaterials\Edit.cshtml" />
+    <Content Include="Views\ProductRawMaterials\Delete.cshtml" />
+    <Content Include="Views\ProductRawMaterials\_View.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
