--- a/maQx/packages.config
+++ b/maQx/packages.config
@@ -45,5 +45,6 @@
   <package id="Postal.Mvc5" version="1.2.0" targetFramework="net45" />
   <package id="RazorEngine" version="3.5.3" targetFramework="net451" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
+  <package id="UnitsNet" version="3.4.0" targetFramework="net451" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
