--- a/maQx/maQx.csproj
+++ b/maQx/maQx.csproj
@@ -291,6 +291,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\font-awesome.css" />
     <Content Include="Content\font-awesome.min.css" />
+    <Content Include="Content\normalize.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -1248,10 +1249,6 @@
     <Content Include="Views\ProductRawMaterials\Edit.cshtml" />
     <Content Include="Views\ProductRawMaterials\Delete.cshtml" />
     <Content Include="Views\ProductRawMaterials\_View.cshtml" />
-    <Content Include="Views\ProductProcess\Create.cshtml" />
-    <Content Include="Views\ProductProcess\Delete.cshtml" />
-    <Content Include="Views\ProductProcess\Details.cshtml" />
-    <Content Include="Views\ProductProcess\Edit.cshtml" />
     <Content Include="Views\ProductProcess\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
