--- a/maQx/packages.config
+++ b/maQx/packages.config
@@ -40,6 +40,7 @@
   <package id="Microsoft.Spatial" version="6.5.0" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
+  <package id="Moment.js" version="2.9.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Postal.Mvc5" version="1.2.0" targetFramework="net45" />
